# se3-icp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  stanford_bunny.ply
created_example_reg_problem/: source.ply  target.ply  transformation_gt.txt
examples/: benchmark_extreme_noise_bunny.cpp  benchmark_kitti.cpp  benchmark_lounge.cpp  benchmark_synthetic.cpp  create_and_save_reg_problem.cpp  registration_example.cpp  registration_example_fgr.cpp  run_registration_method.cpp  test_se3_pure.cpp
include/: cc.hpp  iterative_SE3_registration.hpp
src/: cc.cpp  iterative_SE3_registration.cpp
